# policy-server

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: attestation.yml  ci.yml  container-build.yml  container-image.yml  e2e-tests.yml  release.yml  tests.yml  update-rust-toolchain.yaml
crates/policy-optimizer/: Cargo.toml
crates/policy-optimizer/src/: cli.rs  main.rs
crates/policy-server/: Cargo.toml
e2e-tests/: 01-setup.yml
hack/: docker-compose.yml
src/: cli.rs  config.rs  main.rs  policy_downloader.rs  settings.rs  worker.rs
src/api/: service.rs
src/evaluation/: evaluation_environment.rs  precompiled_policy.rs
tests/: integration_test.rs
tests/common/: mod.rs
tests/data/: ca.pem  client-cert.pem  client-key.pem  otel-collector-config.yaml  server-cert.pem  server-key.pem
