[workspace]
members = ["crates/policy-server", "crates/policy-optimizer"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["env"] }
k8s-openapi = { version = "0.19.0", default-features = false, features = [
  "v1_26",
] }
tokio = { version = "^1", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["ansi", "fmt", "json"] }
