[package]
name = "policy-server"
version = "1.7.0-rc1"
authors = [
  "Kubewarden Developers <kubewarden@suse.de>",
  "Flavio Castelli <fcastelli@suse.com>",
  "Rafael Fernández López <rfernandezlopez@suse.com>",
  "Víctor Cuadrado Juan <vcuadradojuan@suse.de>",
  "José Guilherme Vanz <jguilhermevanz@suse.com>"
]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
daemonize = "0.5"
humansize = "2.1"
itertools = "0.11.0"
k8s-openapi = { workspace = true }
lazy_static = "1.4.0"
num_cpus = "1.16.0"
opentelemetry-otlp = { version = "0.10.0", features = ["metrics", "tonic"] }
opentelemetry = { version = "0.17", default-features = false, features = ["metrics", "trace", "rt-tokio", "serialize"] }
policy-evaluator = { git = "https://github.com/kubewarden/policy-evaluator", tag = "v0.11.1" }
procfs = "0.15"
rayon = "1.6"
semver = { version = "1.0.18", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { workspace = true }
tracing-futures = { workspace = true }
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
warp = { version = "0.3.5", default_features = false, features = [ "multipart", "tls"] }

[dev-dependencies]
rstest = "0.18"
tempfile = "3.7.0"
